// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-date renders with default props 1`] = `
<modus-wc-date value="">
  <div class="date-input-container">
    <input aria-label="Default date" class="modus-wc-date-input modus-wc-input modus-wc-input-bordered modus-wc-input-md modus-wc-w-full" placeholder="dd-mm-yyyy" type="text" value="">
    <modus-wc-button aria-label="Open calendar" class="calendar-icon-button" color="tertiary" shape="circle" size="xs" variant="borderless">
      <modus-wc-icon name="calendar_blank" size="sm"></modus-wc-icon>
    </modus-wc-button>
  </div>
</modus-wc-date>
`;

exports[`modus-wc-date should render with custom props 1`] = `
<modus-wc-date auto-focus="true" bordered="false" custom-class="test-class" disabled="true" input-id="custom-id" input-tab-index="1" label="Test label" max="11/25/2024" min="11/20/2024" name="test-name" readonly="true" required="true" size="lg" value="">
  <modus-wc-input-label forid="custom-id" labeltext="Test label" required="" size="lg"></modus-wc-input-label>
  <div class="date-input-container">
    <input aria-describedby="description" aria-disabled="" aria-label="Test date" aria-labelledby="Another element" class="modus-wc-date-input modus-wc-input modus-wc-input-lg modus-wc-w-full test-class" disabled="" id="custom-id" name="test-name" placeholder="dd-mm-yyyy" required="" tabindex="1" type="text" value="">
    <modus-wc-button aria-label="Open calendar" class="calendar-icon-button" color="tertiary" disabled="" shape="circle" size="xs" variant="borderless">
      <modus-wc-icon name="calendar_blank" size="sm"></modus-wc-icon>
    </modus-wc-button>
  </div>
</modus-wc-date>
`;

exports[`modus-wc-date should render with error feedback 1`] = `
<modus-wc-date value="">
  <div class="date-input-container">
    <input aria-label="Error input" class="modus-wc-date-input modus-wc-input modus-wc-input--error modus-wc-input-bordered modus-wc-input-md modus-wc-w-full" placeholder="dd-mm-yyyy" type="text" value="">
    <modus-wc-button aria-label="Open calendar" class="calendar-icon-button" color="tertiary" shape="circle" size="xs" variant="borderless">
      <modus-wc-icon name="calendar_blank" size="sm"></modus-wc-icon>
    </modus-wc-button>
  </div>
  <modus-wc-input-feedback>
    <div class="modus-wc-input-feedback modus-wc-input-feedback--error modus-wc-input-feedback--md">
      <svg class="mi-outline mi-warning modus-wc-input-feedback-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M12 15.12c-.67 0-1.21.54-1.21 1.19s.54 1.21 1.21 1.21 1.21-.54 1.21-1.21-.54-1.19-1.21-1.19m0-1.61c.36 0 .62-.26.66-.7l.39-5.04s.01-.1.01-.14c0-.63-.45-1.15-1.06-1.15s-1.06.51-1.06 1.15v.14l.4 5.04c.04.44.28.7.66.7M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"></path>
      </svg>
      <span>
        Test error message
      </span>
    </div>
  </modus-wc-input-feedback>
</modus-wc-date>
`;
